[package]
name = "rust-api-examples"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
sherpa-onnx = "0.1.3"
# sherpa-onnx = { path = "../sherpa-onnx/rust/sherpa-onnx" }

cpal = { version = "0.16", optional = true } # cross-platform audio I/O

[features]
# Default features are empty to avoid building cpal by default
default = []

# Feature for using microphone
mic = ["cpal"]

[[example]]
name = "streaming_zipformer_microphone"
required-features = ["mic"]
