[package]
name = "rust-api-examples"
version = "1.12.32"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
sherpa-onnx = { version = "1.12.32", default-features = false }
# sherpa-onnx = { path = "../sherpa-onnx/rust/sherpa-onnx", default-features = false }
serde_json = "1.0"

cpal = { version = "0.16", optional = true } # cross-platform audio I/O

[features]
# Default to static linking so users can run examples without setting library paths
default = ["static"]

# Feature for using microphone
mic = ["cpal"]
static = ["sherpa-onnx/static"]
shared = ["sherpa-onnx/shared"]

[[example]]
name = "streaming_zipformer_microphone"
required-features = ["mic"]
