[package]
name = "rust-api-examples"
version = "1.12.34"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
sherpa-onnx = { version = "1.12.34", default-features = false }
# sherpa-onnx = { path = "../sherpa-onnx/rust/sherpa-onnx", default-features = false }
serde_json = "1.0"

cpal = { version = "0.16", optional = true } # cross-platform audio I/O
ctrlc = "3.4"

[features]
# Default to static linking so users can run examples without setting library paths
default = ["static"]

# Feature for using microphone
mic = ["cpal"]
static = ["sherpa-onnx/static"]
shared = ["sherpa-onnx/shared"]

[[example]]
name = "streaming_zipformer_microphone"
required-features = ["mic"]

[[example]]
name = "sense_voice_simulate_streaming_microphone"
required-features = ["mic"]

[[example]]
name = "fire_red_asr_ctc_simulate_streaming_microphone"
required-features = ["mic"]

[[example]]
name = "parakeet_tdt_ctc_simulate_streaming_microphone"
required-features = ["mic"]

[[example]]
name = "parakeet_tdt_simulate_streaming_microphone"
required-features = ["mic"]

[[example]]
name = "wenet_ctc_simulate_streaming_microphone"
required-features = ["mic"]

[[example]]
name = "zipformer_ctc_simulate_streaming_microphone"
required-features = ["mic"]

[[example]]
name = "zipformer_transducer_simulate_streaming_microphone"
required-features = ["mic"]

[[example]]
name = "qwen3_asr_simulate_streaming_microphone"
required-features = ["mic"]
